k8s_manifast/deploy_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  labels:
    app: petclinic
spec:
  type: ClusterIP
  selector:
    app: petclinic
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deploy
spec:
  selector:
    matchLabels:
      app: petclinic
  replicas: 2
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      securityContext:
        runAsUser: 1000 # set user id : 1000
        runAsGroup: 1000 # set Group id : 1000
      terminationGracePeriodSeconds: 30 
      containers:
      - name: petclinic-container
        image: rajent/petclinic:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet: # check app health via rest api from app
            path: /healthy
            port: 8080
          initialDelaySeconds: 200 # wait for initialize app 
          periodSeconds: 10 # while 10 second
          failureThreshold: 3 # failure count is 3
        volumeMounts:
          - name: logs
            mountPath: /logs
      dnsPolicy: ClusterFirst
      dnsConfig:
        nameservers:
          - 8.8.8.8
        searches:
          - mysql.default.svc.cluster.local

      volumes:
      - name: logs
        hostPath:
          path: /c/logs
